add blog page revisions test

--- a/index.html
+++ b/index.html
@@ -7,4 +7,20 @@
     <h1> Answer 1</h1>
     <P>Body of the paragraph</p>
   </body>
+  <body>
+    <h1> Answer 2</h1>
+    <P>Body of paragraph 2</p>
+  </body>
+  <body>
+    <h1> Answer 3</h1>
+    <P>Body of paragraph 3</p>
+  </body>
+  <body>
+    <h1> Answer 4</h1>
+    <P>Body of paragraph 4</p>
+  </body>
+  <body>
+    <h1> Answer 5</h1>
+    <P>Body of paragraph 5</p>
+  </body>
 </html>
