--- a/index.html
+++ b/index.html
@@ -4,23 +4,6 @@
     <title>My BLog</title>
   </head>
   <body>
-    <h1> Answer 1</h1>
-    <P>Body of the paragraph</p>
-  </body>
-  <body>
-    <h2> Answer 2</h2>
-    <P>Body of paragraph 2</p>
-  </body>
-  <body>
-    <h3> Answer 3</h3>
-    <P>Body of paragraph 3</p>
-  </body>
-  <body>
-    <h4> Answer 4</h4>
-    <P>Body of paragraph 4</p>
-  </body>
-  <body>
-    <h5> Answer 5</h5>
-    <P>Body of paragraph 5</p>
-  </body>
+    <h1>Answers</h1>
+    <P>Changed</p>
 </html>
