--- a/index.html
+++ b/index.html
@@ -1,9 +1,46 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My BLog</title>
+    <title>My Blog</title>
   </head>
   <body>
-    <h1>Answers</h1>
-    <P>Changed</p>
+    <h1>Answer 1</h1>
+    <P> The primary difference between an argument and a parameter is that
+      a parameter is a variable or set of variables in a method. The argument
+      is simply the actual input value of the parameter. You would use a parameter
+      when the data is unknown yet or the argument must be entered by the user.
+      Arguments can be used if there is no variation and the values are already known.</p>
+    </body>
+  <body>
+    <h2>Answer 2</h2>
+    <P> Void in a method declaration indicates that there will be no output,
+      whereas return indicates that there will be some value output at the end of
+      the method.</p>
+    </body>
+  <body>
+    <h3>Answer 3</h3>
+    <P> When you include "import java.util.Scanner" it allows you to include
+      the Scanner.nextInt(), nextDouble() or next(), which allows the program
+      to input strings, doubles or integers into the program. "Java" in
+      java.util.Scanner is the folder "util" is inside the java folder and "Scanner"
+      is inside the "util" folder and is used for inputting values.</p>
+    </body>
+  <body>
+    <h4>Answer 4</h4>
+    <P> A while loop and do while loop are very similar, with the primary difference
+    being that a do while loop requires the conditional statement to be st the end
+    and a while loop is declared before it begins. A for loop is primarily used for
+    loops that have a set number of loops before ending. </p>
+    </body>
+  <body>
+    <h5>Answer 5</h5>
+    <P>Paragraph 5</p>
+    </body>
+  <body>
+    <h5>Answer 5</h4>
+      <p> You typically use .equals for String variables, comparing two Strings
+      together, giving them a true value if they are the same, and a false value
+      if they are not. == is used to compare integers or doubles, while = is used
+      formally assaign a value to a variable. </p>
+    </body>
 </html>
