--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <h5>Answer 5</h5>
     <P>Paragraph 5</p>
     </body>
+  </body>
   <body>
     <h1>Answer 5</h1>
       <p> You typically use .equals for String variables, comparing two Strings
