--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Blog</title>
+    <title>MY BLOG</title>
   </head>
   <body>
     <h1>Answer 1</h1>
@@ -31,10 +31,6 @@
     being that a do while loop requires the conditional statement to be st the end
     and a while loop is declared before it begins. A for loop is primarily used for
     loops that have a set number of loops before ending. </p>
-    </body>
-  <body>
-    <h5>Answer 5</h5>
-    <P>Paragraph 5</p>
     </body>
   </body>
   <body>
